--- a/package.json
+++ b/package.json
@@ -13,16 +13,10 @@
     "@types/node": "^12.12.12",
     "@types/reflect-metadata": "^0.1.0",
     "jest": "^24.9.0",
-    "rimraf": "^3.0.0",
     "ts-jest": "^24.2.0",
-    "ts-loader": "^5.3.1",
-    "typescript": "^3.6.4",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9"
+    "typescript": "^3.6.4"
   },
   "scripts": {
-    "build": "webpack --config webpack.js --mode=development",
-    "start": "node ./build/Bundle.js",
     "test": "jest"
   },
   "dependencies": {
