--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "serialeazy",
   "description": "An easy-to-use serialization library with support for references, type information, generics, inheritance, and more!",
   "author": "Leon Montealegre <leonm99@gmail.com> (http://leonmontealeg.re/)",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "license": "GPL-3.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git://github.com/LeonMontealegre/serialeazy.git"
@@ -13,10 +15,12 @@
     "@types/node": "^12.12.12",
     "@types/reflect-metadata": "^0.1.0",
     "jest": "^24.9.0",
+    "rimraf": "^3.0.0",
     "ts-jest": "^24.2.0",
     "typescript": "^3.6.4"
   },
   "scripts": {
+    "build": "rimraf ./dist && tsc",
     "test": "jest"
   },
   "dependencies": {
