--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,14 @@
 {
   "compilerOptions": {
-    "outDir": "./build/",
-    "sourceMap": true,
-    "noImplicitAny": false,
-    "lib": ["es2019", "dom"],
-    "moduleResolution": "node",
-    "module": "es6",
     "target": "es5",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "downlevelIteration": true,
+    "module": "commonjs",
+    "declaration": true,
+    "outDir": "./dist",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "allowJs": true,
-    "typeRoots" : [
-      "node_modules/@types" // path to your typings directory (relative to tsconfig.json)
-    ],
-    "baseUrl": "."
+    "emitDecoratorMetadata": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "tests.ts"
   ]
 }
